Refactor slightly and don't report black bin for dodgy entries (such as manually bookings for tip visits!) cheshire east are "interesting"